--- a/example.html
+++ b/example.html
@@ -74,8 +74,10 @@ function collisionDetection() {
                 b.status = 0;
                 score++;
                 if(score == brickRowCount*brickColumnCount) {
-                        alert("YOU WIN, CONGRATULATIONS!");
-                        document.location.reload();
+                        alert("YOU WIN, CONGRATULATIONS! prepare for level 2");
+                    level = 5;
+                    draw();
+                        
                     }
             }
             
